# v8_monolib

./: README.md
.github/workflows/: build.yml
gn_args/: debug.gn  release.gn
scripts/: build.ps1
