is_component_build = false
is_debug = true
v8_use_external_startup_data = false
v8_enable_i18n_support = false
use_custom_libcxx = false
v8_monolithic = true
v8_static_library = true
target_cpu = "x64"
v8_enable_sandbox = false
v8_enable_pointer_compression = false
v8_enable_webassembly = false
v8_enable_javascript_promise_hooks = false
v8_enable_trace_maps = false
v8_enable_system_instrumentation = false
v8_enable_intl = false
v8_enable_regexp_interpreter = false
v8_enable_test_features = false
v8_enable_inspector = false
v8_enable_object_print = false
v8_use_snapshot = false
symbol_level = 2
v8_enable_backtrace = true
v8_enable_verify_heap = true
